--- a/client/room.html
+++ b/client/room.html
@@ -150,6 +150,7 @@
             <h4>Similar Name</h4>
           </div>
         </template>
+        <button icon="lock" id="lockRoom">Lock room</button>
         <button icon="fast_forward" id="updateSaveState">Update loaded game</button>
         <button icon="save" id="saveState">Save active game</button>
         <button icon="add" id="addState">Add game</button>
