Add zoomy to add widget overlay

--- a/client/editor.html
+++ b/client/editor.html
@@ -111,8 +111,9 @@
 
   <div id="addOverlay" class="overlay" style="display: none">
     <div class="category cards">
-      <h2>Cards</h2>
+      <h2>Cards & Holders</h2>
       <button class="ui-button" id="addHand">Add hand</button>
+      <button class="ui-button" id="addZoomy">Add zoomy</button>
     </div>
     <div class="category pieces">
       <h2>Game Pieces</h2>
