--- a/client/room.html
+++ b/client/room.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> /*** TITLE ***/ </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <base target="_blank" href=" /*** URL_PREFIX ***/ /">
   <link rel="icon" sizes="any" href="i/branding/favicon-32.png"/>
   <link rel="icon" type="image/svg+xml" href="i/branding/favicon.svg"/>
