--- a/client/editor.html
+++ b/client/editor.html
@@ -105,7 +105,11 @@
       <h1>Edit widget JSON</h1>
       <p>Please check <a href="https://github.com/ArnoldSmith86/virtualtabletop/wiki/Creating-Games">our GitHub wiki for documentation</a>. You can also open this room in <a href="https://virtualtabletop.io/legacy-editor.htm" id="legacy-link">the legacy editor</a> or press CTRL+J for the advanced JSON editor.</p>
       <textarea id="editWidgetJSON"></textarea>
-      <base-edit-overlay :json-edit="true"></base-edit-overlay>
+      <div class="custom-json-editor-buttons">
+        <button class="sidebarButton" icon="save"><span>Save</span></button>
+        <button class="sidebarButton" icon="close"><span>Cancel</span></button>
+      </div>
+      <base-edit-overlay :json-edit="true" style="display:none;"></base-edit-overlay>
     </div>
   </div>
 
