don't ever zoom the "loading room..."

--- a/client/room.html
+++ b/client/room.html
@@ -48,8 +48,9 @@
   </div>
 
   <div id="roomArea">
+    <h1 id="loadingRoomIndicator">Loading room...</h1>
     <div id="room">
-      <div id="topSurface" class="surface"><h1 id="loadingRoomIndicator">Loading room...</h1></div>
+      <div id="topSurface" class="surface"></div>
     </div>
 
     <div id="gridOverlay" class="overlay">
