Restore @ArnoldSmith86's change about JSON files

--- a/client/room.html
+++ b/client/room.html
@@ -470,7 +470,7 @@
         <h2>Copyright Attribution</h2>
           <p>Great care has been made to attribute the sources where appropriate. If you feel your work has been taken or used without your consent, please contact us on <a href="https://discord.gg/CEZz7wny9T">Discord</a> and immediate action will be taken to remove any infringing works.</p>
           <p>All graphics used on this site were either created by members of the VirtualTabletop.io community and released into the public domain, sourced from works in the public domain, or licensed for use through Creative Commons or other licenses.</p>
-          <p>Games and assets available in the public library contain copyright attribution information in the Attribution section of each game.</p>
+          <p>Games and assets available in the public library contain copyright attribution information in the Attribution section of each game (or in their [JSON files](https://github.com/ArnoldSmith86/virtualtabletop/tree/main/library/games)).</p>
           <p>All public library tutorials are released into the public domain under CC0.</p>
         <hr>
           <h3>Icons, Symbols, and Visual Assets</h3>
