--- a/client/room.html
+++ b/client/room.html
@@ -77,7 +77,11 @@
       </div>
       <div id="playerList">
         <template id="template-playerlist-entry" type="text/template">
-          <input type="color" class="teamColor"> <input class="playerName" />
+          <span class="teamColorWrap">
+            <input type="color" class="teamColor">
+            <i class="material-symbols teamColorIcon">person</i>
+          </span>
+          <input class="playerName" />
         </template>
         <label class="me ui-line" data-label="Me »"> </label>
         <label class="otherPlayers ui-line" data-label="Other Players »"> </label>
