added public domain checkbox

--- a/client/room.html
+++ b/client/room.html
@@ -336,6 +336,13 @@
         <div data-field="helpText" data-html="true"></div>
         <h3 data-showfor="attribution">Attribution</h3>
         <div data-field="attribution" data-html="true"></div>
+        <div class="onlyForEdit" style="margin-top: 12px;">
+          <input type="checkbox" id="publicDomain" data-field="publicDomain" data-target="checked">
+          <label for="publicDomain">Uses only freely available assets and the room is released to public domain</label>
+          <p style="font-size: 0.9em; color: var(--textColor); opacity: 0.8; margin-top: 8px; margin-left: 24px;">
+            Games will be checked manually and might be added to public library. Please ensure all assets are freely available before checking this box.
+          </p>
+        </div>
       </div>
     </div>
 
