added AI info to share details

--- a/client/room.html
+++ b/client/room.html
@@ -411,6 +411,7 @@
           <button icon="star_rate" class="star"></button>
           <span data-field="stars" class="uneditable">0</span>
           <i class="material-symbols">link</i>
+          <span class="ai-badge" data-showfor="usesAIImagery" title="Uses AI generated imagery">AI</span>
         </div>
         <div class="details">
           <h1 data-field="name"></h1>
@@ -437,6 +438,10 @@
           <button id="welcomePlayButton" icon="play_arrow">Create room</button>
         </div>
         <p id="welcomeUserGenerated" icon="warning">This game is <b>user-generated content</b> for which VirtualTabletop.io holds no responsibility or liability.</p>
+        <div data-showfor="usesAIImagery" style="margin-top: 12px; padding: 8px; background: rgba(33, 150, 243, 0.1); border-radius: 4px; border-left: 3px solid var(--VTTblue);">
+          <i class="material-symbols" style="vertical-align: middle; color: var(--VTTblue);">auto_awesome</i>
+          <span style="margin-left: 4px;">This game uses AI generated imagery.</span>
+        </div>
       </div>
     </div>
 
