--- a/client/room.html
+++ b/client/room.html
@@ -135,6 +135,14 @@
           <i class="material-symbols">groups</i>
           <select id="filterByMode"></select>
         </span>
+        <span id="filterByAiWrapper" data-priority="8">
+          <i class="material-symbols">auto_awesome</i>
+          <select id="filterByAi">
+            <option>Any</option>
+            <option value="no-ai">No AI imagery</option>
+            <option value="ai">Uses AI imagery</option>
+          </select>
+        </span>
         <span id="librarySortWrapper" data-priority="3">
           <i class="material-symbols">sort_by_alpha</i>
           <select id="librarySort"><option value="name">by Name</option><option value="similarName">by Similar Name</option><option value="stars">by Stars</option><option value="timePlayed">by Popularity</option><option value="lastUpdate">by Last Updated</option><option value="year">by Year</option></select>
