popup now below overlays

--- a/client/room.html
+++ b/client/room.html
@@ -45,6 +45,18 @@
       <div id="topSurface" class="surface"><h1 id="loadingRoomIndicator">Loading room...</h1></div>
     </div>
 
+    <div id="contextMenuPopup" class="contextMenuPopup hidden">
+      <div class="contextMenuPopupBg">
+        <div class="contextMenuRotationRow"></div>
+        <div class="contextMenuContent">
+          <div class="contextMenuPreviewWrap">
+            <div id="contextMenuPreview" class="contextMenuPreview"></div>
+          </div>
+          <div class="contextMenuButtons"></div>
+        </div>
+      </div>
+    </div>
+
     <div id="gridOverlay" class="overlay">
       <div class="modal"></div>
     </div>
