context menu items can have a `description`

--- a/client/room.html
+++ b/client/room.html
@@ -55,6 +55,7 @@
           <div class="contextMenuButtons"></div>
         </div>
       </div>
+      <div id="contextMenuDescriptionPopover" class="contextMenuDescriptionPopover hidden"></div>
     </div>
 
     <div id="gridOverlay" class="overlay">
