--- a/client/room.html
+++ b/client/room.html
@@ -347,9 +347,9 @@
         <h3 data-showfor="attribution">Attribution</h3>
         <div data-field="attribution" data-html="true"></div>
         <div class="onlyForEdit" style="margin-top: 12px;"><input type="checkbox" id="usesAIImagery" data-field="usesAIImagery" data-target="checked"> <label for="usesAIImagery">Uses AI generated imagery</label></div>
-        <div class="hideForEdit" data-showfor="usesAIImagery" style="margin-top: 12px; padding: 8px; background: rgba(33, 150, 243, 0.1); border-radius: 4px; border-left: 3px solid var(--VTTblue);">
-          <i class="material-symbols" style="vertical-align: middle; color: var(--VTTblue);">auto_awesome</i>
-          <span style="margin-left: 4px;">This game uses AI generated imagery.</span>
+        <div class="hideForEdit ai-imagery-notice" data-showfor="usesAIImagery">
+          <i class="material-symbols">auto_awesome</i>
+          <span>This game uses AI generated imagery.</span>
         </div>
       </div>
     </div>
@@ -446,9 +446,9 @@
           <button id="welcomePlayButton" icon="play_arrow">Create room</button>
         </div>
         <p id="welcomeUserGenerated" icon="warning">This game is <b>user-generated content</b> for which VirtualTabletop.io holds no responsibility or liability.</p>
-        <div data-showfor="usesAIImagery" style="margin-top: 12px; padding: 8px; background: rgba(33, 150, 243, 0.1); border-radius: 4px; border-left: 3px solid var(--VTTblue);">
-          <i class="material-symbols" style="vertical-align: middle; color: var(--VTTblue);">auto_awesome</i>
-          <span style="margin-left: 4px;">This game uses AI generated imagery.</span>
+        <div class="ai-imagery-notice" data-showfor="usesAIImagery">
+          <i class="material-symbols">auto_awesome</i>
+          <span>This game uses AI generated imagery.</span>
         </div>
       </div>
     </div>
