Change to "overlay similar to name"

--- a/client/room.html
+++ b/client/room.html
@@ -314,7 +314,7 @@
         </div>
         <div class="details">
           <h1 data-showfor="similarName">Similar to: <span data-field="similarName"></span><span data-showfor="year"> (<span data-field="year"></span>)</span></h1>
-          <div class="onlyForEdit"><input type="checkbox" id="showNameSimilar"> <label for="showNameSimilar">Overlay name</label></div>
+          <div class="onlyForEdit"><input type="checkbox" id="showNameSimilar"> <label for="showNameSimilar">Overlay &quotsimilar to&quot name</label></div>
           <div data-showfor="similarDesigner"><i class="material-symbols">person</i> Designer: <span data-field="similarDesigner"></span></div>
           <div data-showfor="similarAwards" class="hideForEdit"><i class="material-symbols">emoji_events</i> <span data-field="similarAwards"></span></div>
           <div class="onlyForEdit"><i class="material-symbols">emoji_events</i> Awards: <span data-field="similarAwards"></span></div>
