--- a/client/room.html
+++ b/client/room.html
@@ -275,7 +275,7 @@
         </div>
         <div class="details">
           <h1 data-field="name"></h1>
-          <div class="onlyForEdit"><input type="checkbox" id="showName" data-field="showName" data-target="checked"> <label for="showName">Overlay name</label></div>
+          <div class="onlyForEdit"><input type="checkbox" id="showName"> <label for="showName">Overlay name</label></div>
           <div data-showfor="time"><i class="material-symbols">schedule</i> Time: <span data-field="time"></span> minutes</div>
           <div data-showfor="mode"><i class="material-symbols">groups</i> Mode: <span data-field="mode"></span></div>
           <div data-showfor="skill"><i class="material-symbols">psychology</i> Skill: <span data-field="skill"></span></div>
@@ -314,6 +314,7 @@
         </div>
         <div class="details">
           <h1 data-showfor="similarName">Similar to: <span data-field="similarName"></span><span data-showfor="year"> (<span data-field="year"></span>)</span></h1>
+          <div class="onlyForEdit"><input type="checkbox" id="showNameSimilar"> <label for="showNameSimilar">Overlay &quotsimilar to&quot name</label></div>
           <div data-showfor="similarDesigner"><i class="material-symbols">person</i> Designer: <span data-field="similarDesigner"></span></div>
           <div data-showfor="similarAwards" class="hideForEdit"><i class="material-symbols">emoji_events</i> <span data-field="similarAwards"></span></div>
           <div class="onlyForEdit"><i class="material-symbols">emoji_events</i> Awards: <span data-field="similarAwards"></span></div>
