hide AI badge while editing

--- a/client/room.html
+++ b/client/room.html
@@ -268,7 +268,7 @@
           <button icon="star_rate" class="star"></button>
           <span data-field="stars" class="uneditable">0</span>
           <i class="material-symbols">link</i>
-          <span class="ai-badge" data-showfor="usesAIImagery" title="Uses AI generated imagery">AI</span>
+          <span class="ai-badge hideForEdit" data-showfor="usesAIImagery" title="Uses AI generated imagery">AI</span>
           <div class="onlyForEdit">
             <button icon="image" data-field="image" data-target="value" data-forceshow="true">Change</button>
           </div>
