show helpTexts if they only contain AI notice

--- a/client/room.html
+++ b/client/room.html
@@ -340,7 +340,7 @@
         </div>
         <button class="prettyButton next"><i class="material-symbols">arrow_forward</i></button>
       </div>
-      <div id="helpTexts" data-showfor="ruleText|helpText|attribution">
+      <div id="helpTexts" data-showfor="ruleText|helpText|attribution|usesAIImagery">
         <h3 data-showfor="ruleText">How to play the game</h3>
         <div data-field="ruleText" data-html="true"></div>
         <h3 data-showfor="helpText">How to use this implementation</h3>
